# gerbil-bazel

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  README.md  justfile
.github/workflows/: ci.yml  publish-prebuilt.yml  source-producer.yml
docs/rfc/: 0001-public-api.org  0002-prebuilt-linux-capability.org  0003-atomic-package-graph.org  0004-project-receipt-v1-stability.org  0005-upstream-native-build-ownership.org  0006-build-scenario-receipt-v1.org  0006-gerbil-package-graph.org  0007-source-build-identity-v1.org  0008-build-scenario-receipt-v1.org  0009-package-cache-restoration-receipt-v1.org  0010-package-binary-consumer.org  0011-aot-object-and-link-plan.org
docs/runbooks/: source-producer-v1.org
gerbil/: BUILD.bazel  aot.bzl  aot_runner.ss  binary.bzl  defs.bzl  extensions.bzl  functional.ss  gambit_runtime.bzl  gsc_driver.sh.tpl  host_system.bzl  install_gerbil_dependencies.sh.tpl  install_gerbil_dependencies.ss.tpl  local_toolchain.BUILD.bazel.tpl  native_abi_fingerprint.sh  native_scheme_env.sh.tpl  native_tool.sh.tpl  package.bzl  package_graph_dependency_repository_test.sh  package_graph_repository.bzl  package_graph_repository_test.sh  package_manifest.ss  package_manifest_test.sh  package_receipt_schema_test.sh  package_receipt_v1_instances_test.sh  package_request_schema_test.sh  package_runner.ss  prebuilt_repository.bzl  prebuilt_toolchain.BUILD.bazel.tpl  project.bzl  project_dependency_sources_repository.bzl  project_receipt_schema_test.sh  project_receipt_v1_instances_test.sh  project_runner.ss  providers.bzl  repository.bzl  repository_validation.bzl  resource_guard.ss  resource_guard_test.sh  resource_policy.ss  run_package_test.sh  (+17 more)
schemas/: BUILD.bazel  gerbil-bazel.aot-receipt.v1.schema.json  gerbil-bazel.build-scenario-receipt.v1.schema.json  gerbil-bazel.cache-restoration-receipt.v1.schema.json  gerbil-bazel.gerbil-bootstrap-attempt.v1.schema.json  gerbil-bazel.gerbil-bootstrap-attempt.v2.schema.json  gerbil-bazel.install-materialization-receipt.v1.schema.json  gerbil-bazel.native-link-plan.v1.schema.json  gerbil-bazel.package-execution-telemetry.v1.schema.json  gerbil-bazel.package-graph.v1.schema.json  gerbil-bazel.package-manifest.v1.schema.json  gerbil-bazel.package-receipt.v1.schema.json  gerbil-bazel.package-request.v1.schema.json  gerbil-bazel.prebuilt-capability-manifest.v1.schema.json  gerbil-bazel.prebuilt-capability-package-receipt.v1.schema.json  gerbil-bazel.prebuilt-promotion-authorization.v1.schema.json  gerbil-bazel.project-receipt.v1.schema.json  gerbil-bazel.project-request.v1.schema.json  gerbil-bazel.source-build-checkpoint.v1.schema.json  gerbil-bazel.source-build-identity.v1.schema.json  gerbil-bazel.source-producer-admission.v1.schema.json
tests/auto/: MODULE.bazel.tpl
tests/prebuilt/: BUILD.bazel  MODULE.bazel.tpl
tests/repository-provider/: BUILD.bazel  consumer.BUILD.bazel.tpl  project-root.marker  project_dependency_state_test.sh  project_library_view_test.sh
tests/repository-provider/project-library/clan/: ready.txt
tests/repository-provider/project-library/gslph/: ready.txt
tests/smoke/: BUILD.bazel  aot-runtime.c  build.ss  build_settings.bzl  compile-target.ss  dependency-build.ss  dependency-changed-build.ss  dependency-changed.ss  dependency.ss  gerbil_test_lifecycle_test.sh  guarded_project_receipt_test.sh  gxpkg_native_package_test.sh  independent-build.ss  independent.ss  install_dependencies_test.sh  native-math-build.ss  package-binary.ss  package_aot_test.sh  package_binary_test.sh  package_receipt_test.sh  project-root.marker  project_library_view_test.sh  project_receipt_test.sh  receipt-build.ss  smoke-test.ss  source-root-fixture.json  source-root-support.ss  source-root-test.ss  source_file_visibility_test.sh  source_package_validation_contract.bzl  source_package_visibility_test.sh  source_resolution_negative_cases.sh  source_resolution_receipt_test.sh  source_resolution_replay_extension.bzl  source_resolution_replay_test.sh  toolchain_environment_test.sh
tests/smoke/.gerbil/pkg/clan/: BUILD.bazel
tests/smoke/cache-restoration-dependency/: build.ss  gerbil.pkg
tests/smoke/cache-restoration-dependency/src/: value.ss
tests/smoke/cache-restoration-root/: build.ss  gerbil.pkg
tests/smoke/cache-restoration-root/src/: main.ss
tests/smoke/gxpkg-native/: build.ss  gerbil.pkg
tests/smoke/gxpkg-native/native-math/: lib.ss  main.ss
tests/smoke/package-graph/: build.ss  gerbil.pkg
tests/smoke/package-graph-dependency/: build.ss  gerbil.pkg
tests/smoke/package-graph-dependency/src/: main.ss
tests/smoke/package-graph-dependency/test/: dependency-test.ss
tests/smoke/package-graph/src/: main.ss
tests/smoke/package-manifest/: build.ss  gerbil.pkg
tests/smoke/package-manifest/src/: main.ss
tests/smoke/package-test/: build.ss  gerbil.pkg
tests/smoke/package-test/src/: value.ss
tests/smoke/package-test/test/: blocking-test.ss  failure-test.ss  value-test.ss
tests/smoke/project-library/clan/: ready.txt
tests/smoke/project-library/gslph/: ready.txt
tools/bench/: build_evidence.py  run_build_scenarios.py  run_build_scenarios_test.py  run_cache_restoration_scenarios.py  run_cache_restoration_scenarios_test.py
tools/ci/: authorize_prebuilt_promotion.sh  bootstrap_gerbil.sh  gerbil_source_build_config.json  package_prebuilt_capability.sh  record_install_materialization.sh  run_gerbil_bootstrap_attempt.sh  source_build_checkpoint.sh  source_build_identity.sh  source_producer_admission.sh  test_atomic_package_cache.sh  test_authorize_prebuilt_promotion.sh  test_bootstrap_gerbil.sh  test_compile_action_boundary.sh  test_gerbil_bootstrap_attempt.sh  test_install_materialization.sh  test_package_action_boundary.sh  test_prebuilt_repository.sh  test_repository_provider.sh  test_repository_provider_receipt.sh  test_source_build_checkpoint.sh  test_source_build_identity.sh  test_source_package_repository.sh  test_source_producer_admission.sh  test_source_producer_workflow.sh  validate.sh
