load("@rules_shell//shell:sh_binary.bzl", "sh_binary")
load("@rules_shell//shell:sh_test.bzl", "sh_test")

package(default_visibility = ["//visibility:public"])

toolchain_type(name = "toolchain_type")

sh_binary(
    name = "native_abi_fingerprint",
    srcs = ["native_abi_fingerprint.sh"],
)

sh_binary(
    name = "run_project",
    srcs = ["run_project.sh"],
)

sh_test(
    name = "run_project_test",
    srcs = ["run_project_test.sh"],
    args = ["$(rlocationpath :run_project)"],
    data = [":run_project"],
)

sh_test(
    name = "validate_json_test",
    srcs = ["validate_json_test.sh"],
    args = [
        "$(rlocationpath @local_gerbil//:gxi)",
        "$(rlocationpath :validate_json.ss)",
    ],
    data = [
        ":validate_json.ss",
        "@local_gerbil//:gxi",
    ],
)

exports_files([
    "defs.bzl",
    "extensions.bzl",
    "host_system.bzl",
    "install_gerbil_dependencies.sh.tpl",
    "local_toolchain.BUILD.bazel.tpl",
    "native_scheme_env.sh.tpl",
    "native_tool.sh.tpl",
    "prebuilt_repository.bzl",
    "prebuilt_toolchain.BUILD.bazel.tpl",
    "project.bzl",
    "repository.bzl",
    "toolchain.bzl",
    "validate_json.ss",
])
