load("@rules_shell//shell:sh_binary.bzl", "sh_binary")
load("@rules_shell//shell:sh_test.bzl", "sh_test")

package(default_visibility = ["//visibility:public"])

toolchain_type(name = "toolchain_type")

sh_binary(
    name = "native_abi_fingerprint",
    srcs = ["native_abi_fingerprint.sh"],
)

sh_binary(
    name = "run_project",
    srcs = ["run_project.sh"],
)

sh_test(
    name = "run_project_test",
    srcs = ["run_project_test.sh"],
    args = ["$(rlocationpath :run_project)"],
    data = [":run_project"],
)

sh_test(
    name = "validate_json_test",
    srcs = ["validate_json_test.sh"],
    args = [
        "$(rlocationpath @local_gerbil//:gxi)",
        "$(rlocationpath :validate_json.ss)",
    ],
    data = [
        ":validate_json.ss",
        "@local_gerbil//:gxi",
    ],
)

sh_test(
    name = "resource_guard_test",
    srcs = ["resource_guard_test.sh"],
    args = [
        "$(rlocationpath @local_gerbil//:gxi)",
        "$(rlocationpath :resource_guard.ss)",
    ],
    data = [
        ":resource_guard.ss",
        "@local_gerbil//:gxi",
    ],
)

sh_test(
    name = "project_receipt_schema_test",
    srcs = ["project_receipt_schema_test.sh"],
    args = [
        "$(rlocationpath @local_gerbil//:gxi)",
        "$(rlocationpath :validate_json.ss)",
        "$(rlocationpath //schemas:gerbil-bazel.project-receipt.v1.schema.json)",
    ],
    data = [
        ":validate_json.ss",
        "//schemas:gerbil-bazel.project-receipt.v1.schema.json",
        "@local_gerbil//:gxi",
    ],
)

sh_test(
    name = "project_receipt_v1_instances_test",
    srcs = ["project_receipt_v1_instances_test.sh"],
    args = [
        "$(rlocationpath @local_gerbil//:gxi)",
        "$(rlocationpath :validate_project_receipt_v1.ss)",
        "$(rlocationpath //schemas:gerbil-bazel.project-receipt.v1.schema.json)",
        "$(rlocationpath //tests/smoke:compile_receipt)",
        "$(rlocationpath //tests/smoke:receipt_compile_receipt)",
        "$(rlocationpath //tests/smoke:dependency_compile_receipt)",
    ],
    data = [
        ":validate_project_receipt_v1.ss",
        "//schemas:gerbil-bazel.project-receipt.v1.schema.json",
        "//tests/smoke:compile_receipt",
        "//tests/smoke:dependency_compile_receipt",
        "//tests/smoke:receipt_compile_receipt",
        "@local_gerbil//:gxi",
    ],
)

sh_test(
    name = "source_producer_admission_schema_test",
    srcs = ["//gerbil:source_producer_admission_schema_test.sh"],
    args = [
        "$(rlocationpath @local_gerbil//:gxi)",
        "$(rlocationpath :validate_json.ss)",
        "$(rlocationpath //schemas:gerbil-bazel.source-producer-admission.v1.schema.json)",
    ],
    data = [
        "//gerbil:validate_json.ss",
        "//schemas:gerbil-bazel.source-producer-admission.v1.schema.json",
        "@local_gerbil//:gxi",
    ],
)

sh_test(
    name = "source_producer_admission_v1_instances_test",
    srcs = ["//gerbil:source_producer_admission_v1_instances_test.sh"],
    args = [
        "$(rlocationpath @local_gerbil//:gxi)",
        "$(rlocationpath :validate_source_producer_admission_v1.ss)",
        "$(rlocationpath //schemas:gerbil-bazel.source-producer-admission.v1.schema.json)",
        "$(rlocationpath //:tools/ci/source_producer_admission.sh)",
    ],
    data = [
        "//:tools/ci/source_producer_admission.sh",
        "//gerbil:validate_source_producer_admission_v1.ss",
        "//schemas:gerbil-bazel.source-producer-admission.v1.schema.json",
        "@local_gerbil//:gxi",
    ],
)

exports_files([
    "defs.bzl",
    "extensions.bzl",
    "gambit_runtime.bzl",
    "host_system.bzl",
    "install_gerbil_dependencies.sh.tpl",
    "local_toolchain.BUILD.bazel.tpl",
    "native_scheme_env.sh.tpl",
    "native_tool.sh.tpl",
    "prebuilt_repository.bzl",
    "prebuilt_toolchain.BUILD.bazel.tpl",
    "project.bzl",
    "repository.bzl",
    "resource_guard.ss",
    "toolchain.bzl",
    "validate_json.ss",
    "validate_project_receipt_v1.ss",
    "write_project_receipt.ss",
])
