load(
    "@gerbil_bazel//gerbil:defs.bzl",
    "gerbil_project_compile",
    "gerbil_project_dev",
    "gerbil_project_test",
)
load("@rules_shell//shell:sh_binary.bzl", "sh_binary")
load("@rules_shell//shell:sh_test.bzl", "sh_test")
load(":build_settings.bzl", "scenario_state_flag")
load(":source_package_validation_contract.bzl", "source_package_validation_contract")

source_package_validation_contract()

exports_files(["project-root.marker"])

scenario_state_flag(
    name = "dependency_state",
    build_setting_default = "baseline",
)

scenario_state_flag(
    name = "configuration_state",
    build_setting_default = "baseline",
)

config_setting(
    name = "changed_dependency_input",
    flag_values = {":dependency_state": "changed"},
)

config_setting(
    name = "changed_configuration_input",
    flag_values = {":configuration_state": "changed"},
)

_PROJECT_ACTION_CONFIGURATION_ENV = select({
    ":changed_configuration_input": {
        "GERBIL_SCENARIO_CONFIGURATION": "changed",
    },
    "//conditions:default": {
        "GERBIL_SCENARIO_CONFIGURATION": "baseline",
    },
})

gerbil_project_compile(
    name = "dependency_compile",
    srcs = select({
        ":changed_dependency_input": ["dependency-changed.ss"],
        "//conditions:default": ["dependency.ss"],
    }),
    build_script = select({
        ":changed_dependency_input": "dependency-changed-build.ss",
        "//conditions:default": "dependency-build.ss",
    }),
    env = _PROJECT_ACTION_CONFIGURATION_ENV,
    process_guard = True,
    require_library_output = True,
)

gerbil_project_compile(
    name = "independent_compile",
    srcs = ["independent.ss"],
    build_script = "independent-build.ss",
    env = _PROJECT_ACTION_CONFIGURATION_ENV,
    process_guard = True,
    require_library_output = True,
)

gerbil_project_compile(
    name = "native_math_compile",
    srcs = [
        "native-math.ss",
    ],
    build_script = "native-math-build.ss",
    process_guard = True,
    require_library_output = True,
)

gerbil_project_compile(
    name = "compile",
    args = ["compile"],
    build_script = "build.ss",
    env = _PROJECT_ACTION_CONFIGURATION_ENV,
    deps = [
        ":dependency_compile",
        ":independent_compile",
    ],
)

filegroup(
    name = "dependency_compile_receipt",
    srcs = [":dependency_compile"],
    output_group = "receipt",
    visibility = ["//gerbil:__pkg__"],
)

filegroup(
    name = "native_math_compile_receipt",
    srcs = [":native_math_compile"],
    output_group = "receipt",
)

filegroup(
    name = "compile_receipt",
    srcs = [":compile"],
    output_group = "receipt",
    visibility = ["//gerbil:__pkg__"],
)

gerbil_project_compile(
    name = "receipt_compile",
    build_script = "receipt-build.ss",
    receipt_line_prefix = "PROJECT_RECEIPT ",
)

gerbil_project_test(
    name = "test",
    project = ":compile",
    tests = ["smoke-test.ss"],
)

gerbil_project_test(
    name = "reuse_test_one",
    project = ":compile",
    tests = ["smoke-test.ss"],
)

gerbil_project_test(
    name = "reuse_test_two",
    project = ":compile",
    tests = ["smoke-test.ss"],
)

gerbil_project_test(
    name = "source_root_test",
    srcs = [
        "source-root-fixture.json",
        "source-root-support.ss",
    ],
    project = ":compile",
    tests = ["source-root-test.ss"],
)

gerbil_project_dev(
    name = "dev",
    args = ["compile"],
    build_script = "build.ss",
    deps = [
        ":dependency_compile",
        ":independent_compile",
    ],
)

gerbil_project_dev(
    name = "dev_test",
    args = ["compile"],
    build_script = "build.ss",
    tests = ["smoke-test.ss"],
    deps = [
        ":dependency_compile",
        ":independent_compile",
    ],
)

filegroup(
    name = "receipt_compile_log",
    srcs = [":receipt_compile"],
    output_group = "log",
)

filegroup(
    name = "receipt_compile_receipt",
    srcs = [":receipt_compile"],
    output_group = "receipt",
    visibility = ["//gerbil:__pkg__"],
)

sh_test(
    name = "guarded_project_receipt_test",
    srcs = ["guarded_project_receipt_test.sh"],
    args = ["$(rlocationpath :dependency_compile_receipt)"],
    data = [":dependency_compile_receipt"],
)

sh_test(
    name = "native_math_receipt_test",
    srcs = ["guarded_project_receipt_test.sh"],
    args = ["$(rlocationpath :native_math_compile_receipt)"],
    data = [":native_math_compile_receipt"],
)

sh_test(
    name = "project_receipt_test",
    srcs = ["project_receipt_test.sh"],
    args = [
        "$(rlocationpath :receipt_compile_receipt)",
        "$(rlocationpath :receipt_compile_log)",
    ],
    data = [
        ":receipt_compile_log",
        ":receipt_compile_receipt",
    ],
)

sh_test(
    name = "toolchain_environment_test",
    srcs = ["toolchain_environment_test.sh"],
    args = ["$(rlocationpath @local_gerbil//:toolchain.receipt.json)"],
    data = ["@local_gerbil//:toolchain.receipt.json"],
)

sh_test(
    name = "install_dependencies_test",
    srcs = ["install_dependencies_test.sh"],
    args = [
        "$(rlocationpath @local_gerbil//:install_dependencies)",
        "$(rlocationpath @gerbil_bazel//gerbil:install_gerbil_dependencies.sh.tpl)",
    ],
    data = [
        "@gerbil_bazel//gerbil:install_gerbil_dependencies.sh.tpl",
        "@local_gerbil//:install_dependencies",
    ],
)

sh_test(
    name = "gxpkg_native_package_test",
    srcs = ["gxpkg_native_package_test.sh"],
    args = [
        "$(rlocationpath @local_gerbil//:gxpkg)",
        "$(rlocationpath gxpkg-native/gerbil.pkg)",
        "$(rlocationpath gxpkg-native/build.ss)",
        "$(rlocationpath gxpkg-native/native-math/lib.ss)",
        "$(rlocationpath gxpkg-native/native-math/main.ss)",
    ],
    data = [
        "gxpkg-native/build.ss",
        "gxpkg-native/gerbil.pkg",
        "gxpkg-native/native-math/lib.ss",
        "gxpkg-native/native-math/main.ss",
        "@local_gerbil//:gxpkg",
    ],
)

sh_test(
    name = "project_library_view_test",
    srcs = ["project_library_view_test.sh"],
    args = ["$(rlocationpath @project_gerbil//:toolchain.receipt.json)"],
    data = [
        "@project_gerbil//:dependency_libraries",
        "@project_gerbil//:toolchain.receipt.json",
    ],
)

sh_test(
    name = "source_file_visibility_test",
    srcs = ["source_file_visibility_test.sh"],
    args = ["$(rlocationpath @clan_sources//:ready.txt)"],
    data = ["@clan_sources//:ready.txt"],
)

sh_test(
    name = "source_package_visibility_test",
    srcs = ["source_package_visibility_test.sh"],
    args = [
        "$(rlocationpath @downloaded_fixture_sources//:gerbil.pkg)",
        "$(rlocationpath @downloaded_fixture_sources//:build.ss)",
        "$(rlocationpath @downloaded_fixture_sources//:source-package.json)",
        "$(rlocationpath @downloaded_fixture_sources//:source-resolution-receipt.json)",
        "$(rlocationpath @downloaded_fixture_sources//:pure/dict/assq.ss)",
    ],
    data = [
        "@downloaded_fixture_sources//:build.ss",
        "@downloaded_fixture_sources//:gerbil.pkg",
        "@downloaded_fixture_sources//:pure/dict/assq.ss",
        "@downloaded_fixture_sources//:source-package.json",
        "@downloaded_fixture_sources//:source-resolution-receipt.json",
        "@downloaded_fixture_sources//:sources",
    ],
)

sh_test(
    name = "source_resolution_receipt_test",
    srcs = ["source_resolution_receipt_test.sh"],
    args = ["$(rlocationpath @clan_sources//:source-resolution-receipt.json)"],
    data = ["@clan_sources//:source-resolution-receipt.json"],
)

sh_test(
    name = "source_resolution_replay_test",
    srcs = ["source_resolution_replay_test.sh"],
    args = [
        "$(rlocationpath @source_resolution_replay_a//:source-resolution-receipt.json)",
        "$(rlocationpath @source_resolution_replay_b//:source-resolution-receipt.json)",
    ],
    data = [
        "@source_resolution_replay_a//:source-resolution-receipt.json",
        "@source_resolution_replay_b//:source-resolution-receipt.json",
    ],
)

sh_binary(
    name = "source_resolution_negative_cases",
    srcs = ["source_resolution_negative_cases.sh"],
    visibility = ["//visibility:public"],
)
