load("@rules_shell//shell:sh_test.bzl", "sh_test")

exports_files([
    "package-graph-dependency/build.ss",
    "package-graph-dependency/gerbil.pkg",
    "package-graph-dependency/src/main.ss",
    "package-graph/build.ss",
    "package-graph/gerbil.pkg",
    "package-graph/src/main.ss",
    "package-manifest/build.ss",
    "package-manifest/gerbil.pkg",
    "package-manifest/src/main.ss",
])

sh_test(
    name = "toolchain_environment_test",
    srcs = ["toolchain_environment_test.sh"],
    args = ["$(rlocationpath @local_gerbil//:toolchain.receipt.json)"],
    data = ["@local_gerbil//:toolchain.receipt.json"],
)

sh_test(
    name = "install_dependencies_test",
    srcs = ["install_dependencies_test.sh"],
    args = [
        "$(rlocationpath @local_gerbil//:install_dependencies)",
        "$(rlocationpath @gerbil_bazel//gerbil:install_gerbil_dependencies.ss.tpl)",
        "$(rlocationpath @local_gerbil//:gxi)",
        "$(rlocationpath @gerbil_bazel//gerbil:resource_policy.ss)",
        "$(rlocationpath @gerbil_bazel//gerbil:functional.ss)",
    ],
    data = [
        "@gerbil_bazel//gerbil:functional.ss",
        "@gerbil_bazel//gerbil:install_gerbil_dependencies.ss.tpl",
        "@gerbil_bazel//gerbil:resource_policy.ss",
        "@local_gerbil//:install_dependencies",
        "@local_gerbil//:gxi",
    ],
)

sh_test(
    name = "gxpkg_native_package_test",
    srcs = ["gxpkg_native_package_test.sh"],
    args = [
        "$(rlocationpath @local_gerbil//:gxpkg)",
        "$(rlocationpath gxpkg-native/gerbil.pkg)",
        "$(rlocationpath gxpkg-native/build.ss)",
        "$(rlocationpath gxpkg-native/native-math/lib.ss)",
        "$(rlocationpath gxpkg-native/native-math/main.ss)",
    ],
    data = [
        "gxpkg-native/build.ss",
        "gxpkg-native/gerbil.pkg",
        "gxpkg-native/native-math/lib.ss",
        "gxpkg-native/native-math/main.ss",
        "@local_gerbil//:gxpkg",
    ],
)
